--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">WhereYouAtTwo</string>
-    <string name="google_maps_key">AIzaSyDHaFYs8cUyI1Ta5RtOxhg1pXPAd2W9RBs</string>
+    <string name="app_name">WhereYouAt</string>
+    <string name="google_maps_key">AIzaSyA-cxB44vGBgTj4AAEmyl3Wr3-3DLLYrFU</string>
+    <!--<string name="google_maps_key">AIzaSyDHaFYs8cUyI1Ta5RtOxhg1pXPAd2W9RBs</string>-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Where You At?!</string>
@@ -35,4 +36,16 @@
     <string name="join_button_text">Join</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="send_message_button_text">Send</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="alert_options_pick_spot">Pick spot...</string>
+    <string name="alert_options_close_to_me">Within range of me</string>
+    <string name="menu_join_create">Join/Create</string>
 </resources>
